--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
     <header>
         <h1> HABARI ZETU</h1>
-        
+        <input type ="text" id="serch" placeholder="search latest news">
+        <!--Here we are implementing our button to search for the news-->
+        <button onclick="searchNews()">Search</button>
     </header>
 </body>
 </html>
