I created the header part which consist of the search bar

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <title>HABARI ZETU NEWS SITE</title>
 </head>
 <body>
+    <!--This is our header part for our news site-->
     <header>
         <h1> HABARI ZETU</h1>
         <input type ="text" id="serch" placeholder="search latest news">
         <!--Here we are implementing our button to search for the news-->
         <button onclick="searchNews()">Search</button>
     </header>
+    <!--Our start of the navigation menu with the news categories-->
 </body>
 </html>
