--- a/index.html
+++ b/index.html
@@ -14,5 +14,15 @@
         <button onclick="searchNews()">Search</button>
     </header>
     <!--Our start of the navigation menu with the news categories-->
+    <nav>
+        <!--Our news categories part that contains the various news category buttons-->
+        <button onclick="fetchNews('general')">General</button>
+        <button onclick="fetchNews('business')">Business</button>
+        <button onclick="fetchNews('sports')">Sports</button>
+        <button onclick="fetchNews('health')">Health</button>
+        <button onclick="fetchNews('politics')">Politics</button>
+        <button onclick="fetchNews('entertainment')">Entertainment</button>
+        <button onclick="fetchNews('science')">Science/Tech</button>
+    </nav>
 </body>
 </html>
