--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
         </div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="/JAVASCRIPT/app.js"></script>
 </body>
 </html>
