--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modern News Website</title>
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="./CSS/style.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
@@ -13,7 +13,7 @@
         <input type="text" id="searchBar" placeholder="Search news...">
         <button onclick="searchNews()">Search</button>
         
-        <!-- Date Filter Inputs -->
+        <!-- Da~~te Filter Inputs -->
         <label for="startDate">Start Date:</label>
         <input type="date" id="startDate">
         <label for="endDate">End Date:</label>
@@ -41,6 +41,6 @@
         </div>
     </div>
 
-    <script src="/JAVASCRIPT/app.js"></script>
+    <script src="./JAVASCRIPT/app.js"></script>
 </body>
 </html>
