Added the changes so that the API can display globally

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </nav>
 
     <!-- News articles will be displayed here -->
-    <div id="article-list" class="news-container"></div>
+    <div id="newsContainer" class="news-container"></div>
 
     <!-- Popup for Full Article Details -->
     <div id="fullArticlePopup" class="popup">
