Removed the redirect option to avoid redirecting one to the websites

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern News Website</title>
+    <title>HABARI ZETU</title>
     <link rel="stylesheet" href="./style.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
     <header>
-        <h1>Modern News Website</h1>
+        <h1>HABARI ZETU News Website</h1>
+        <marquee behavior="" direction="left">Get the latest News EverydayFrom our Top Headlines</marquee>
         <!-- Search bar and search button for finding news articles -->
         <input type="text" id="searchBar" placeholder="Search news...">
         <button id="searchButton" onclick="searchNews()">Search</button>
@@ -44,7 +45,7 @@
             <h2 id="fullArticleTitle"></h2>
             <img id="fullArticleImage" src="" alt="News Image">
             <p id="fullArticleContent"></p>
-            <a id="fullArticleLink" href="" target="_blank">Read Full Article</a>
+            
         </div>
     </div>
 
